<resources>
    <string name="app_name">FinalProject</string>
    <string name="EnterName" />
    <string name="EnterName1">Enter name</string>
    <string name="EnterPassword">Enter password</string>
    <string name="PutName">Enter Name</string>
    <string name="PutEmail">Enter email</string>
    <string name="PutPassword">Enter password</string>
    <string name="Password_2">"Re-enter password "</string>
    <string name="Re_password">"Re-enter password "</string>
    <string name="PasswordAgain">Re-enter password</string>
    <string name="LoginName">Enter username</string>
    <string name="LoginPassword">Enter password</string>
    <string name="PasswordSquared">"Re-enter password "</string>
    <string name="PlacePassword">Re-enter password</string>
    <string name="AddItem">Add a task</string>
    <string name="EnterPass">"Re-enter password "</string>
    <string name="EnterPassword1">"Re-enter password "</string>
    <string name="ReenterPass">Re enter password</string>
    <string name="MedName">Enter name of medication</string>
    <string name="Frequency">How many times a day</string>
</resources>