<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/login"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="140dp"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_uname"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/LoginName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_uname" />

    <EditText
        android:id="@+id/login_reenter"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/PlacePassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="123dp"
        app:srcCompat="@drawable/icon"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="7dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="26dp"
        android:layout_height="57dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/login_uname"
        app:srcCompat="@drawable/baseline_person_outline_24"
        tools:layout_editor_absoluteY="210dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/login_password"
        app:srcCompat="@drawable/baseline_password_24"
        tools:layout_editor_absoluteY="298dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/login_reenter"
        app:srcCompat="@drawable/baseline_password_24"
        tools:layout_editor_absoluteY="366dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="44dp"
        android:text="Login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_reenter" />

</androidx.constraintlayout.widget.ConstraintLayout>